Load Page Update

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -6,7 +6,14 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
-  </body>
+    <div class="main-container">
+        <div class="content" id="load-content">
+            <h1>WebLoad</h1>
+            <form id="enter-url-form">
+                <input type="text" name="enter-url" id="url_input" required="true" placeholder="Enter Url...">
+                <button type="submit" id="load_btn">Load</button>
+            </form>
+        </div>
+    </div>
+</body>
 </html>
